@@ -7,3 +7,4 @@ void win_SoundSetScale(int scale);
 void win_SoundWriteData(int32 *buffer, int count);
 void win_Throttle();
 extern bool muteTurbo;
+extern int soundo;
